testdata/nameclash01.reject.out
type error: can not unify
[32m'HList [32mV1[m[m
with
[32m'Image 1 (Color ([32m'VecScalar [32m1[m [32m'Float[m[m))[m

in testdata/nameclash01.reject.lc:2:48:
    let FrameBuffer = FrameBuffer (colorImage1 1.0)
                                               ^^^

------------ trace
!type error: can not unify
[32m'HList [32mV1[m[m
with
[32m'Image 1 (Color ([32m'VecScalar [32m1[m [32m'Float[m[m))[m

in testdata/nameclash01.reject.lc:2:48

------------ tooltips
testdata/nameclash01.reject.lc 2:23-2:34  {a : List Type} -> {b : 'sameLayerCounts a} -> HList a -> FrameBuffer (ImageLC ('head Type a)) ('map Type ImageSemantics ImageSem a)
testdata/nameclash01.reject.lc 2:36-2:47  {a:Nat} -> {b} -> {c} -> {d : Num b} -> {e : c ~ VecScalar a b} -> c -> Image 1 ('Color c)
testdata/nameclash01.reject.lc 2:36-2:51  Image 1 ('Color (VecScalar 1 Float))
testdata/nameclash01.reject.lc 2:48-2:51  Float
